# EDNL

./: .gitignore  ABIN.hpp  ABMinMax.hpp  AbinVec0.hpp  AbinVec1.hpp  abin_E-S.h  agen_E-S.hpp  apo.hpp  listaenla.h  pilaenla.h
GRAFOS/: CMakeLists.txt  alg_grafoPMC.h  main.cpp
Practica1/: AbinEnla.hpp  AbinVec0.hpp  AbinVec1.hpp  CMakeLists.txt  Ejercicio1.HPP  Ejercicio1.cpp  Ejercicio2.cpp  Ejercicio2Altura.hpp  Ejercicio3.cpp  Ejercicio3.hpp  ejercicio6.cpp  ejercicio6.hpp  ejercicio7Pseudocompleto.hpp  main.cpp  p2profe.cpp
Practica2/: CMakeLists.txt  ej1similares.hpp  ej2reflejo.hpp  ej3aritmetica.hpp  main.cpp
Practica3/: AgenEnla.hpp  CMakeLists.txt  agenlis.hpp  ej1gradoAgen.hpp  ej2profundidad.hpp  ej3desequilibrio.hpp  ej4poda.hpp  main.cpp
Practica4/: ABB.hpp  CMakeLists.txt
Practica5/: AgenEnla.hpp  CMakeLists.txt  ExamenReflejados.hpp  ParcialArboles2024.hpp  apuntes.hpp  ej1eliminaOrdenado.hpp  ej2InstertarminMax.hpp  main.cpp
