cmake_minimum_required(VERSION 3.27)
project(Practica1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Practica1 main.cpp
        AbinEnla.hpp
        AbinVec0.hpp
        ABIN.hpp
        abin_E-S.h
        AbinVec1.hpp
        Ejercicio1.HPP
        Ejercicio3.hpp
        ejercicio6.hpp
        ejercicio7Pseudocompleto.hpp
        apo.hpp)
